# ESP32_GPS_loger_v2

./: GPS Loger v1.drawio  README.md
1. PCB/: LeoDJ.kicad_sym  TC4056A.kicad_sym  fp-lib-table  gps_tracer.kicad_pcb  gps_tracer.kicad_prl  gps_tracer.kicad_pro  gps_tracer.kicad_sch  gps_tracer.kicad_sch-bak  simbol_library.kicad_sym  sym-lib-table  ~gps_tracer.kicad_sch.lck
1. PCB/Footprint_library.pretty/: GPS_ANTENNA.kicad_mod  GY_GPS6MV2_module.kicad_mod  JST 1.25.kicad_mod  MIC_MODULE.kicad_mod  SIM800L-CORE.kicad_mod  SOIC127P600X175-9N.kicad_mod  TSSOP8.kicad_mod  smd_1.27_conn.kicad_mod
1. PCB/GERBER/: gps_tracer-B_Cu.gbr  gps_tracer-B_Mask.gbr  gps_tracer-B_Paste.gbr  gps_tracer-B_Silkscreen.gbr  gps_tracer-Edge_Cuts.gbr  gps_tracer-F_Cu.gbr  gps_tracer-F_Mask.gbr  gps_tracer-F_Paste.gbr  gps_tracer-F_Silkscreen.gbr  gps_tracer-NPTH.drl  gps_tracer-PTH.drl  gps_tracer-job.gbrjob
2. Firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
2. Firmware/main/: CMakeLists.txt  Kconfig.projbuild  gps_data.h  main.c  main.h
2. Firmware/main/bme280/: main_bme280.c  main_bme280.h
2. Firmware/main/buttery/: battery.c  buttery.h
2. Firmware/main/gps/: main_gps.c  main_gps.h  nmea_parser.h
2. Firmware/main/gsm/: gsm_sim800l.c  gsm_sim800l.h
2. Firmware/main/i2c/: i2c.c  i2c.h
2. Firmware/main/i2c/bme280/: bme280.c  bme280.h  main_bme280.c  main_bme280.h
2. Firmware/main/i2c/dc3231/: dc3231.c  dc3231.h
2. Firmware/main/i2c/oled_ssd1306/: font.h  ssd1306.c  ssd1306.h
2. Firmware/main/i2c/pca9536d/: pca9536d.c  pca9536d.h
2. Firmware/main/leds_gpio/: leds_gpio.c  leds_gpio.h
2. Firmware/main/memory/: nvs_and_spiffs.c  nvs_and_spiffs.h
2. Firmware/main/microsd/: file_server.c  mount.c  mount.h
2. Firmware/main/pca9536d/: pca9536d.c  pca9536d.h
2. Firmware/main/wifi/: http.c  http.h  wifi.c  wifi.h
2. Firmware/main/wifi/ap/: ap.c  ap.h
2. Firmware/main/wifi/sta/: sta.c  sta.h
2. Firmware/mkspiffsmy/: readme.txt
2. Firmware/mkspiffsmy/files/: index.html
