idf_component_register(SRCS "main.c"
                        "bme280/bme280.c"
                        "bme280/main_bme280.c"
                        "leds_gpio/leds_gpio.c"
                        "microsd/mount.c"
                        "gps/main_gps.c"
                        "gps/nmea_parser.c"
                        "gsm/gsm_sim800l.c"
                        "microsd/file_server.c"
                        "wifi/http.c"
                        "wifi/wifi.c"
                        "buttery/battery.c"
                        "memory/nvs_and_spiffs.c"
                        "pca9536d/pca9536d.c"
                       INCLUDE_DIRS ".")
