idf_component_register(SRCS "main.c"
                        "i2c/i2c.c"
                        "i2c/bme280/main_bme280.c"
                        "i2c/bme280/bme280.c"
                        "i2c/dc3231/dc3231.c"
                        "i2c/pca9536d/pca9536d.c"
                        "i2c/oled_ssd1306/ssd1306.c"
                        "i2c/oled_ssd1306/font.c"
                        "WiFi/sta/sta.c"
                        "WiFi/ap/ap.c"
                        "WiFi/wifi.c"
                        "memory/nvs_and_spiffs.c"
                        "gps/main_gps.c"
                        "gps/nmea_parser.c"
                        "buttery/battery.c"
                        "gsm/gsm_sim800l.c"
                        "microsd/file_server.c"
                        "microsd/mount.c"
                       INCLUDE_DIRS ".")
